<resources>
    <string name="app_name">HyunSeoShop</string>
    <string name="order">Order</string>
    <string name="mypage">Mypage</string>
    <string name="made">Made</string>
    <string name="honey">Honey</string>
    <string name="quick">QUiCK</string>
    <string name="best">BEST</string>
    <string name="hot">Hot</string>
    <string name="cart">Cart</string>
    <string name="login">Login</string>
    <string name="Button" />
    <string name="button">Button</string>
    <string name="buy">Buy</string>
    <string name="whis">WHIS</string>
    <string name="detail">DETAIL</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="register">Register</string>
    <string name="already_registered_nlogin_here">Already Registered? Login Here</string>
    <string name="review">Review</string>
    <string name="best_photo_review">Best Photo Review</string>
    <string name="_1st">1st</string>
    <string name="_2st">2st</string>
    <string name="_3st">3st</string>
    <string name="home">home</string>
    <string name="b3">b3</string>
    <string name="b2">b2</string>
    <string name="b1" />
    <string name="main" />
    <string name="h3" />
    <string name="h2" />
    <string name="h1" />
    <string name="main_pro">main_pro</string>
    <string name="pro1">pro1</string>
    <string name="pro2">pro2</string>
    <string name="pro3">pro3</string>
    <string name="pro4">pro4</string>
    <string name="Logo" />
    <string name="are_you_sure">Are you sure?</string>
    <string name="total">total</string>
    <string name="how_many_is_it">How many is it?</string>
    <string name="one_1st">one_1st</string>
    <string name="one_2st">one_2st</string>
    <string name="one_3st">one_3st</string>
    <string name="hyunseo">hyunseo</string>
    <string name="_216230054">216230054</string>
    <string name="현재날짜">현재 날짜</string>
    <string name="today">11/17/2017</string>
    <string name="title_activity_tab_layout">Tab_layout</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_1_fragment">tab1</string>
    <string name="tab_2_fragment">tab2</string>
    <string name="tab_3_fragment">tab3</string>
    <string name="title_activity_main">MainActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab1_button">btn1</string>
    <string name="example">example</string>
    <string name="_1">1</string>
    <string name="첫번째">첫번째</string>
    <string name="두번째">두번째</string>
    <string name="세번째">세번째</string>
    <string name="frist">Frist</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="Thread">Thread</string>
    <string name="처음값">처음값 :</string>
    <string name="두번째값">두번째값 :</string>
    <string name="증가">증가</string>
    <string name="mainvalue_0">MainValue : 0</string>
    <string name="backvalue_0">backValue : 0</string>
    <string name="onevalue">첫번째 값 : 0</string>
    <string name="twovalue">두번째 값 : 0</string>
    <string name="age">AGE</string>
    <string name="name">NAME</string>
    <string name="입력">입력</string>
    <string name="출력">조회</string>
    <string name="날짜">날짜</string>
    <string name="항목">항목</string>
    <string name="가격">가격</string>
    <string name="추가">추가</string>
    <string name="삭제">삭제</string>
    <string name="수정">수정</string>
    <string name="조회">조회</string>
    <string name="이름">이름</string>
    <string name="학번">학번</string>
    <string name="go">Go</string>
    <string name="elapsed_time">Elapsed time :</string>
    <string name="sec">sec</string>
    <string name="http_www_naver_com">http://www.naver.com</string>
    <string name="메뉴">메뉴</string>
</resources>